<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/age_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

    <Button
        android:id="@+id/write_to_shared_preferences_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="saveDataToSharedPreferences"
        android:text="@string/write_to_sharedpreferences"
        app:layout_constraintEnd_toEndOf="@+id/age_edit_text"
        app:layout_constraintStart_toStartOf="@+id/age_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/age_edit_text" />

    <Button
        android:id="@+id/add_to_sqlite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addDataToSqlite"
        android:text="@string/add_to_sqlite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/write_to_shared_preferences_button" />

    <Button
        android:id="@+id/read_name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="readNameFromFile"
        android:text="@string/read_name_from_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/write_name_button"
        app:layout_constraintTop_toBottomOf="@+id/add_to_sqlite_button" />

    <Button
        android:id="@+id/write_name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="writeNameToFile"
        android:text="@string/write_name_to_file"
        app:layout_constraintEnd_toStartOf="@+id/read_name_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_to_sqlite_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/write_name_button" />

</androidx.constraintlayout.widget.ConstraintLayout>